Added sidebar information

--- a/The-Hand.html
+++ b/The-Hand.html
@@ -27,10 +27,10 @@
       <button onclick= "fingerPicker()">Pick</button>
     </div>
   </div>
-    <div id="The-Sidebar">The Sidebar
-      <p>Item #1</p>
-      <p>Item #2</p>
-      <p>Item #3</p>
+    <div id="The-Sidebar">The Many Uses of your Hand
+      <p>To pick your nose</p>
+      <p>To point at a person</p>
+      <p>to grab a french frie</p>
     </div>
 </body>
 </html>
