--- a/The-Hand.html
+++ b/The-Hand.html
@@ -31,6 +31,7 @@
       <p>To pick your nose</p>
       <p>To point at a person</p>
       <p>to grab a french frie</p>
+      <p>to type code</p>
     </div>
 </body>
 </html>
